--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,13 @@ section {
     position: relative;
 }
 
+.hero-secondary {
+    margin: 20px;
+    background-color: black;
+    font-size: 20px;
+    color: red;
+}
+
 .hero-form {
     color: #024e76;
     background-color: #fce138;
