--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,13 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+/* Header Styles Start */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -20,7 +23,6 @@ header h1 {
     font-size: 36px; 
     color: #fce138;
     margin: 0;
-    display: inline;
 }
 
 header a {
@@ -29,7 +31,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
@@ -42,8 +43,9 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 22px;
 }
+/* Header Styles End */
 
-/* apply styles to footer */
+/* Footer Styles Start */
 footer {
     background: #fce138;
     width: 100%;
@@ -66,12 +68,14 @@ footer div {
 footer a {
     color: #024e76;
 }
+/* Footer Styles End */
 
-/* Hero style start */
+/* ALL SECTION TAGS */
 section {
     padding: 60px;
 }
 
+/* Hero style start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -130,6 +134,7 @@ section {
 }
 /* Hero style end */
 
+/* Section Title Styles Start */
 .section-title {
     font-size: 55px;
     color: #024e76;
@@ -147,7 +152,9 @@ section {
 .secondary-border {
     border-color: #39a6b2;
 }
+/* Section Title Styles End */
 
+/* WHAT WE DO STYLES START */
 .intro {
     text-align: center;
 }
@@ -159,7 +166,9 @@ section {
     font-size: 20px;
     margin: 0 auto;
 }
+/* WHAT WE DO STYLES END */
 
+/* WHAT YOU DO STYLES START */
 .steps {
     text-align: center;
     background: #fce138;
@@ -188,7 +197,9 @@ section {
 .steps span {
     font-size: 38px;
 }
+/* WHAT YOU DO STYLES END */
 
+/* MEET THE TRAINERS START */
 .trainers {
     text-align: center;
 }
@@ -224,7 +235,9 @@ section {
     font-size: 32px;
     margin-bottom: 8px;
 }
+/* MEET THE TRAINERS END */
 
+/* REACH OUT START */
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 26px;
@@ -275,3 +288,4 @@ section {
   .contact-info a {
     color: #fce138;
   }
+  /* REACH OUT END */
