--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,11 +161,12 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
     border-color: #39a6b2;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -178,22 +179,18 @@ section {
 /* Section Title Styles End */
 
 /* WHAT WE DO STYLES START */
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 /* WHAT WE DO STYLES END */
 
 /* WHAT YOU DO STYLES START */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -224,7 +221,7 @@ section {
 
 /* MEET THE TRAINERS START */
 .trainers {
-    text-align: center;
+    
 }
 
 .trainer {
@@ -273,7 +270,6 @@ section {
 }
 
 .contact {
-    text-align: center;
     background: #024e76;
   }
   
@@ -312,3 +308,8 @@ section {
     color: #fce138;
   }
   /* REACH OUT END */
+
+  /* UTILITY */
+  .flex-row {
+      display: flex;
+  }
