--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -92,6 +92,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-secondary {
@@ -147,7 +148,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -159,7 +160,7 @@ section {
 
 /* Section Title Styles Start */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     border-color: #39a6b2;
@@ -328,23 +329,23 @@ section {
 
   .contact-form input,
   .contact-form textarea {
-      border: 1px solid #024e76;
-      display: block;
-      padding: 7px 15px;
-      font-size: 16px;
-      color: #024e76;
-      width: 100%;
-      margin-bottom: 15px;
-      margin-top: 5px;
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
   }
 
-  .contact-form button {
-      width: 100%;
-      border: none;
-      background-color: #fce138;
-      color: #024e76;
-      text-align: center;
-      padding: 15px 0;  
+.contact-form button {
+    width: 100%;
+    border: none;
+    background-color: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;  
     font-size: 16px;
   }
   /* REACH OUT END */
@@ -360,4 +361,20 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* MEDIA QUERIES START */
+/* SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+
+}
+
+/* TABLETS AND SMALLER */
+@media screen and (max-width:768px) {
+
+}
+
+/* MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+
 }
