--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,17 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 /* HEADER / NAV BAR STYLES START */
 
 header {
   padding: 20px 35px;
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -25,13 +31,14 @@ header {
   background-position: center;
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 
 header h1 {
   font-weight: bold;
   margin: 0;
   font-size: 36px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -61,7 +68,7 @@ header nav ul li a {
 
 header nav ul li a:hover {
     background-color: #fce138;
-    color: #024e76;
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -147,6 +154,68 @@ section {
   margin: 5px 0 15px 0;
 }
 
+.checkbox-wrapper input,
+.radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label,
+.radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.checkbox-wrapper label::before,
+.radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);
+  border: 1px solid #024e76;
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid #024e76;
+  border-bottom: 2px solid #024e76;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg); 
+}
+
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
 .form-input {
   border: 1px solid #024e76;
   display: block;
@@ -157,6 +226,7 @@ section {
   margin-bottom: 15px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.75);
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
 }
 
 .form-input:focus {
@@ -230,7 +300,7 @@ section {
 }
 
 .step:not(:last-child) {
-    border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
